--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,6 +9,7 @@
 	<properties>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
+		 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<sumo-runner.version>1.0.0-SNAPSHOT</sumo-runner.version>
 	</properties>
 
