--- a/stream-sumo-flink/pom.xml
+++ b/stream-sumo-flink/pom.xml
@@ -2,16 +2,16 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.pk</groupId>
 	<artifactId>stream-sumo-flink</artifactId>
-	<version>${sumo-runner.version}</version>
+
+	<parent>
+		<groupId>net.pk</groupId>
+		<artifactId>sumo-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
 
 	<properties>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<flink.version>1.8.0</flink.version>
-		<sumo-runner.version>1.0.0-SNAPSHOT</sumo-runner.version>
 	</properties>
 
 	<dependencies>
