--- a/db-cassandra/pom.xml
+++ b/db-cassandra/pom.xml
@@ -2,7 +2,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>stream-sumo-flink</artifactId>
+	<artifactId>db-cassandra</artifactId>
 
 	<parent>
 		<groupId>net.pk</groupId>
@@ -17,32 +17,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-streaming-java_2.11</artifactId>
-			<version>${flink.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-connector-cassandra_2.11</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>net.pk</groupId>
-			<artifactId>stream-sumo-api</artifactId>
-			<version>${sumo-runner.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>net.pk</groupId>
-			<artifactId>db-cassandra</artifactId>
-			<version>${sumo-runner.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.15</version>
+			<groupId>com.datastax.oss</groupId>
+			<artifactId>java-driver-core</artifactId>
+			<version>4.0.0</version>
+			<type>pom</type>
 		</dependency>
 	</dependencies>
 </project>
