--- a/sumo-runner/base/pom.xml
+++ b/sumo-runner/base/pom.xml
@@ -27,6 +27,12 @@
 			<version>1.7.15</version>
 		</dependency>
 
+<!-- 		<dependency> -->
+<!-- 			<groupId>log4j</groupId> -->
+<!-- 			<artifactId>log4j</artifactId> -->
+<!-- 			<version>1.2.17</version> -->
+<!-- 		</dependency> -->
+
 		<dependency>
 			<groupId>net.pk</groupId>
 			<artifactId>stream-sumo-api</artifactId>
