--- a/sumo-runner/grid-stretched/src/main/resources/sumo.properties
+++ b/sumo-runner/grid-stretched/src/main/resources/sumo.properties
@@ -1,5 +1,8 @@
 sumo.bin.file=/home/peter/projects/sumo/bin/sumo-gui
 sumo.config.file=/home/peter/master/modules/sumo-runner/grid-stretched/config/grid-stretched.sumocfg
+stream.processing.host=localhost
+stream.processing.port.e1detectorvalue=9000
+stream.processing.port.tlsvalue=9001
 
 #flink.stream.host=localhost
 #flink.stream.port=9090
