--- a/sumo-runner/test/pom.xml
+++ b/sumo-runner/test/pom.xml
@@ -27,11 +27,26 @@
 			<version>${sumo-runner.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>net.pk</groupId>
 			<artifactId>db-cassandra</artifactId>
 			<version>${sumo-runner.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.datastax.oss</groupId>
+			<artifactId>java-driver-core</artifactId>
+			<version>4.0.0</version>
+			<type>pom</type>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.dropwizard.metrics</groupId>
+			<artifactId>metrics-core</artifactId>
+			<version>3.1.2</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -45,6 +60,13 @@
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-java_2.11</artifactId>
+			<version>${flink.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-streaming-scala_2.11</artifactId>
 			<version>${flink.version}</version>
 			<scope>test</scope>
 		</dependency>
