--- a/sumo-runner/grid-stretched/pom.xml
+++ b/sumo-runner/grid-stretched/pom.xml
@@ -66,7 +66,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>net.pk.traas.server.gridstretched.Main</mainClass>
+									<mainClass>net.pk.traas.server.gridstretched.MainScenarioGridStretched</mainClass>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
