--- a/sumo-runner/single-big-junction/src/main/resources/sumo.properties
+++ b/sumo-runner/single-big-junction/src/main/resources/sumo.properties
@@ -1,5 +1,5 @@
 sumo.bin.file=/home/peter/projects/sumo/bin/sumo-gui
 sumo.config.file=/home/peter/master/modules/sumo-runner/single-big-junction/config/single-big-junction.sumocfg
-
-#flink.stream.host=localhost
-#flink.stream.port=9090
+stream.processing.host=localhost
+stream.processing.port.e1detectorvalue=9000
+#stream.processing.port.tlsvalue=9001
