--- a/sumo-runner/t-junction/pom.xml
+++ b/sumo-runner/t-junction/pom.xml
@@ -70,7 +70,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>net.pk.traas.server.tjunction.Main</mainClass>
+									<mainClass>net.pk.traas.server.tjunction.MainScenarioTJunction</mainClass>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
