--- a/sumo-runner/t-junction/src/main/resources/sumo.properties
+++ b/sumo-runner/t-junction/src/main/resources/sumo.properties
@@ -1,2 +1,5 @@
 sumo.bin.file=/home/peter/projects/sumo/bin/sumo-gui
 sumo.config.file=/home/peter/master/modules/sumo-runner/t-junction/config/tcross.sumocfg
+stream.processing.host=localhost
+stream.processing.port.e1detectorvalue=9000
+stream.processing.port.tlsvalue=9001
