--- a/sumo-runner/block-junctions/src/main/resources/sumo.properties
+++ b/sumo-runner/block-junctions/src/main/resources/sumo.properties
@@ -1,7 +1,6 @@
 sumo.bin.file=/home/peter/projects/sumo/bin/sumo-gui
 sumo.config.file=/home/peter/master/modules/sumo-runner/block-junctions/config/block-cross.sumocfg
+stream.processing.host=localhost
 stream.processing.port.e1detectorvalue=9000
 stream.processing.port.tlsvalue=9001
-
-#flink.stream.host=localhost
-#flink.stream.port=9000
+stream.processing.port.lanevalue=9002
