--- a/sumo-runner/grid-stretched/src/main/resources/sumo.properties
+++ b/sumo-runner/grid-stretched/src/main/resources/sumo.properties
@@ -3,6 +3,4 @@ sumo.config.file=/home/peter/master/modules/sumo-runner/grid-stretched/config/gr
 stream.processing.host=localhost
 stream.processing.port.e1detectorvalue=9000
 stream.processing.port.tlsvalue=9001
-
-#flink.stream.host=localhost
-#flink.stream.port=9090
+stream.processing.port.lanevalue=9002
