--- a/sumo-runner/single-big-junction/src/main/resources/sumo.properties
+++ b/sumo-runner/single-big-junction/src/main/resources/sumo.properties
@@ -3,3 +3,4 @@ sumo.config.file=/home/peter/master/modules/sumo-runner/single-big-junction/conf
 stream.processing.host=localhost
 stream.processing.port.e1detectorvalue=9000
 #stream.processing.port.tlsvalue=9001
+#stream.processing.port.lanevalue=9002
