--- a/sumo-runner/block-junctions/pom.xml
+++ b/sumo-runner/block-junctions/pom.xml
@@ -65,7 +65,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>net.pk.traas.server.blockjunctions.MainScenarioBlockJunctions</mainClass>
+									<mainClass>net.pk.traas.server.start.ScenarioMain</mainClass>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
