--- a/sumo-runner/single-big-junction/pom.xml
+++ b/sumo-runner/single-big-junction/pom.xml
@@ -70,7 +70,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>net.pk.traas.server.singlebigjunction.MainScenarioSingleBigJunction</mainClass>
+									<mainClass>net.pk.traas.server.start.ScenarioMain</mainClass>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
