Added comment to properties file

--- a/sumo-runner/base/src/main/resources/sumo.properties
+++ b/sumo-runner/base/src/main/resources/sumo.properties
@@ -1,4 +1,6 @@
+# install sumo and add bin file path here
 sumo.bin.file=/home/peter/projects/sumo/bin/sumo-gui
+
 stream.processing.host=localhost
 stream.processing.port.e1detectorvalue=9000
 stream.processing.port.tlsvalue=9001
