--- a/stream-sumo-api/pom.xml
+++ b/stream-sumo-api/pom.xml
@@ -10,10 +10,6 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<properties>
-		<flink.version>1.8.0</flink.version>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -22,9 +18,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-connector-cassandra_2.11</artifactId>
-			<version>${flink.version}</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.15</version>
 		</dependency>
 
 		<dependency>
